<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Native Libs Monitor</string>
    <string name="app_type_mix_desc">It uses libs with mixed ABIs.</string>
    <string name="app_type_x86_desc">It uses x86 libraries.</string>
    <string name="app_type_x86_64_desc">It uses x86_64 libraries.</string>
    <string name="app_type_arm_desc">It uses ARM libraries.</string>
    <string name="app_type_no_libs_desc">It doesn\'t embed any native libraries.</string>
    <string name="app_type_unknown_desc">It\'s an unknown type of application.</string>
    <string name="app_type_arm64_desc">It uses ARM64 libraries.</string>
    <string name="app_type_mips_desc">It uses MIPS libraries.</string>
    <string name="app_type_mips64_desc">It uses MIPS64 libraries.</string>
    <string name="now_app_type_mix">" now uses libs with mixed ABIs."</string>
    <string name="now_app_type_x86">" now uses x86 libs."</string>
    <string name="now_app_type_x86_64">" now uses x86_64 libs."</string>
    <string name="now_app_type_arm">" now uses ARM libs."</string>
    <string name="now_app_type_no_libs">" now doesn\'t use any native libs."</string>
    <string name="now_app_type_unknown">" now unknown."</string>
    <string name="now_app_type_arm64">" now uses ARM64 libs."</string>
    <string name="now_app_type_mips">" now uses MIPS libs."</string>
    <string name="now_app_type_mips64">" now uses MIPS64 libs."</string>
    <string name="was_app_type_no_libs">"wasn\'t using native libs, "</string>
    <string name="was_app_type_mix">"was using libs with mixed ABIs, "</string>
    <string name="was_app_type_x86">"was using x86 libs, "</string>
    <string name="was_app_type_x86_64">"was using x86_64 libs, "</string>
    <string name="was_app_type_arm">"was using ARM libs, "</string>
    <string name="was_app_type_arm64">"was using ARM64 libs, "</string>
    <string name="was_app_type_mips">"was using MIPS libs, "</string>
    <string name="was_app_type_mips64">"was using MIPS64 libs, "</string>
    <string name="was_app_type_unknown">"was unknown, "</string>
    <string name="app_has_been_updated">%1s has been updated</string>
    <string name="app_has_been_installed">%1s has been installed</string>
    <string name="entry_title_native_library_entry_points">"Entry points inside library: "</string>
    <string name="title_package_name">Package Name</string>
    <string name="view_on_play_store">View on Play Store</string>
    <string name="application_name">Application Name</string>
    <string name="title_version_code">Version</string>
    <string name="title_used_third_parties">Frameworks/Libraries used</string>
    <string name="title_installed_native_libraries">Native Libraries installed</string>
    <string name="title_native_libraries_in_APK">Native Libraries inside APK</string>
    <string name="application_icon">App Icon</string>
    <string name="sort_by_type">Sort by type</string>
    <string name="sort_by_last_update">Sort by last update</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="include_java_apps_menu_item_entry">Include Java Apps</string>
    <string name="refresh_all_menu_entry">Refresh All</string>
    <string name="csv_export_menu_item_entry">Export as CSV</string>
    <string name="new_abis_in_apk">"New ABI(s) inside APK: "</string>
    <string name="abis_not_in_apk_anymore">"ABI(s) not inside APK anymore: "</string>
    <string name="abis_inside_apk">"ABIs inside APK: "</string>
    <string name="menu_share_app_details">Share</string>
    <string name="export_database_csv">Export CSV</string>
    <string name="menu_refresh_app">Refresh App</string>
    <string name="search_filter_title">Filter apps</string>
    <string name="device_details_label">Device Details</string>
    <string name="native_bridge_version_label">Native Bridge Version</string>
    <string name="cpu_abis_label">Supported ABIs</string>
    <string name="build_version_label">Build Version</string>
    <string name="opengles_driver_version_label">OpenGL ES Driver</string>
    <string name="opengles_version_label">OpenGL ES Version</string>
    <string name="opengles_driver_vendor_label">OpenGL ES Driver Vendor</string>
    <string name="opengles_hardware_label">OpenGL ES Renderer</string>
    <string name="loading">Loading…</string>
    <string name="title_apk_location">APK location</string>
    <string name="analyzing_apps_n_remaining">Analyzing apps (%d remaining)...</string>
    <string name="analyzing_apps">Analyzing apps...</string>
    <string name="app_details_fragment_title">%s details</string>
    <string name="app_details_fragment_title_not_loaded">Application not loaded</string>
    <string name="app_details_fragment_no_native_libs_installed">No native libraries installed.</string>
    <string name="app_details_fragment_no_native_libs_installed_marshmallow">No native libraries installed.
        Starting with Android 6.0, libs are loaded directly from the APK when they\'re stored without compression.</string>
    <string name="app_details_fragment_no_native_libs_inside_apk">There are no native libraries inside the APK or it wasn\'t possible to list them.</string>
</resources>
