<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appDetailScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical"
    tools:context=".AppDetailFragment"
    tools:showIn="@layout/activity_app_detail">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="4dp"
            android:layout_row="0"
            android:text="@string/application_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:layout_row="1"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <Button
            android:id="@+id/goToPlayStoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:focusable="true"
            android:nextFocusDown="@+id/installedNativeLibsListView"
            android:text="@string/view_on_play_store">

            <requestFocus />
        </Button>

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_package_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textPackageName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:textIsSelectable="true"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_version_code"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textAPKVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:textIsSelectable="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/titleFrameworksUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_used_third_parties"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textFrameworksUsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:textIsSelectable="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/titleApkLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_apk_location"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textApkLocations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:textIsSelectable="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/installedNativeLibsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_installed_native_libraries"
        android:textSize="12sp" />

    <ListView
        android:id="@id/installedNativeLibsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="fill_vertical"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:minHeight="48dp"
        android:nextFocusDown="@+id/packagedNativeLibsListView"
        android:nextFocusUp="@id/goToPlayStoreButton"
        android:padding="0dp"
        android:requiresFadingEdge="vertical"
        tools:listitem="@layout/list_item_nativelibs" />

    <TextView
        android:id="@+id/packagedNativeLibsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_native_libraries_in_APK"
        android:textSize="12sp" />

    <ListView
        android:id="@id/packagedNativeLibsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="fill_vertical"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:minHeight="48dp"
        android:nextFocusUp="@id/installedNativeLibsListView"
        android:padding="0dp"
        android:requiresFadingEdge="vertical"
        tools:listitem="@layout/list_item_nativelibs"/>
</LinearLayout>